--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <title>Toast</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.5/dat.gui.js"></script>
 
 <style>
   html {
     background: #000;
   }
-  #background,
   canvas {
     left: 50%;
     position: fixed;
     transform: translate(-50%, -50%);
     top: 50%;
   }
-  #background {
-    background-color: #BBF3FC;
-  }
 </style>
 
-<div id="background"></div>
 <canvas id="canvas"></canvas>
 
 <script src="main.js"></script>
