Add barriers, butter, and better physics

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 
 <style>
   html {
-    background: #000;
+    background: #fff;
   }
   canvas {
+    background: #000;
     left: 50%;
+    max-height: 100%;
+    max-width: 100%;
     position: fixed;
-    transform: translate(-50%, -50%);
     top: 50%;
+    transform: translate(-50%, -50%);
   }
 </style>
 
