--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,1 @@
-<title>Toast</title><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"><style>canvas{left:50%;max-height:100%;max-width:100%;position:fixed;top:50%;transform:translate(-50%,-50%);}</style><canvas id="canvas"></canvas>
+<title>Toast</title><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"><style>canvas{left:50%;max-height:100%;max-width:100%;position:fixed;top:50%;transform:translate(-50%,-50%);}</style><body>
